templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8screen-backend
spec:
  ports:
    - protocol: TCP
      port: 8080       
  selector:
    app: k8screen-backend
